--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.3",
-    "prisma": "^5.9.1"
+    "prisma": "^5.10.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "express": "^4.18.2"
   }
 }
