--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "generate": "npx prisma generate",
+    "push": "prisma db push",
+    "pull": "prisma db pull"
   },
   "keywords": [
     "js",
