--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "generate": "npx prisma generate",
+    "prisma:generate": "npx prisma generate",
     "push": "prisma db push",
     "pull": "prisma db pull"
   },
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "zod": "^3.22.4"
   }
