--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node --env-file=.env src/server.js",
+    "dev": "nodemon --env-file=.env src/server.js",
     "prisma:generate": "npx prisma generate",
     "push": "npx prisma db push",
     "pull": "npx prisma db pull"
@@ -30,8 +30,8 @@
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.22.4"
   }
 }
